<resources>
    <string name="app_name">摸鱼派</string>


    <string name="hint_user_name">用户名/邮箱</string>
    <string name="hint_user">用户名</string>
    <string name="hint_pwd">密码</string>
    <string name="hint_code">验证码</string>
    <string name="hint_phone">手机号码</string>
    <string name="hint_mfa">两步验证码</string>
    <string name="hint_sms_code">短信验证码</string>
    <string name="hint_redpack_point">总共塞多少积分</string>
    <string name="hint_redpack_point_1">一个包塞多少积分</string>
    <string name="hint_redpack_num">分几个包来着？</string>
    <string name="hint_redpack_info">红包上写点啥吧</string>
    <string name="hint_topic">新话题</string>
    <string name="hint_invite">邀请码</string>

    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="btn_finish_register">完成注册</string>
    <string name="btn_send">biu~</string>
    <string name="btn_get_sms">获取验证码</string>
    <string name="btn_send_redpack">千金散尽~</string>
    <string name="btn_confirm">就这样吧~</string>
    <string name="btn_confirm_yes">是的</string>

    <string name="role_hacker">黑客</string>
    <string name="role_painter">画家</string>


    <string name="toast_net_err">你小子断网了吧……</string>
    <string name="toast_user">你得告诉我用户名……</string>
    <string name="toast_user_1">想一个用户名吧</string>
    <string name="toast_phone">有手机号才能发验证码</string>
    <string name="toast_code">要输入验证码哟</string>
    <string name="toast_sms_code">要输入短信验证码哟</string>
    <string name="toast_pwd">没密码我怎么登的上去嘛……</string>
    <string name="toast_pwd_1">要设置密码的哟</string>
    <string name="toast_connect_success">连接成功</string>
    <string name="toast_connect_fail">连接失败</string>
    <string name="toast_reconnect">正在重连</string>
    <string name="toast_say_something">说点什么吧~</string>
    <string name="toast_unauth">登录过期了，少侠重新登录吧</string>
    <string name="toast_specify">总得告诉我发给谁吧~</string>
    <string name="toast_topic">新话题呢？</string>
    <string name="toast_success">成功</string>
    <string name="toast_add_meme">这表情已经加过了</string>
    <string name="toast_send_success">发送成功</string>
    <string name="toast_register_success">注册成功</string>

    <string name="info_send_redpack">发红包</string>
    <string name="info_cancel_redpack">穷，算了吧</string>
    <string name="info_zero">0溢事件</string>
    <string name="info_max">老王的认可</string>
    <string name="info_edit_topic">编辑话题</string>
    <string name="info_edit_topic_detail">修改话题需要16积分，将自动从账户中扣除；最大长度16字符，不合法字符将被自动过滤。</string>
    <string name="info_topic_cancel">算了，不改了</string>
    <string name="info_add_meme">添加到表情包</string>
    <string name="info_del_meme">删除表情</string>
    <string name="info_del_meme_detail">确认要删除下面这个表情么？</string>
    <string name="info_cancel_del">不是，要留着</string>
    <string name="info_scroll_to_bottom">⇩滑到底部</string>
    <string name="info_to_register">没有账号？点这里注册</string>
    <string name="info_back_to_login">返回登录</string>
    <string name="info_left_one_step">还差一步</string>

    <string name="finger_scissors">✌</string>
    <string name="finger_stone">✊</string>
    <string name="finger_cloth">🖐</string>


    <string name="redpack_random">摸鱼者，事竟成！</string>
    <string name="redpack_average">平分红包，人人有份！</string>
    <string name="redpack_specify">试试看，这是给你的红包吗？</string>
    <string name="redpack_heartbeat">玩的就是心跳！</string>
    <string name="redpack_gesture">石头剪刀布！</string>
    <string name="redpack_default">为什么不问问神奇红包呢？</string>


    <string name="redpack_type_random">拼手气红包</string>
    <string name="redpack_type_average">普通红包</string>
    <string name="redpack_type_specify">专属红包</string>
    <string name="redpack_type_heartbeat">心跳红包</string>
    <string name="redpack_type_gesture">猜拳红包</string>
    <string name="redpack_type_default">神奇红包</string>

    <string name="drawer_moon">清风明月</string>
    <string name="drawer_set">设置</string>
    <string name="drawer_logout">退出登录</string>

    <string name="menu_send">发送</string>

    <string name="cha">×</string>


</resources>