<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/containFl"
    android:layout_height="match_parent"
    tools:context=".ui.activity.Register2Activity">

    <ImageView
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:id="@+id/bgImg"
        android:adjustViewBounds="true"
        android:layout_height="match_parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:gravity="center_horizontal"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="96dp"
            android:layout_marginTop="70dp"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher"
            android:layout_marginBottom="16dp"
            android:layout_height="96dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/info_left_one_step"
            android:layout_marginBottom="24dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundMode="outline"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:background="@null"
                android:inputType="textPassword"
                android:lines="1"
                android:id="@+id/pwdEt"
                android:hint="@string/hint_pwd"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundMode="outline"
            android:layout_marginTop="18dp"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:background="@null"
                android:inputType="text"
                android:id="@+id/inviteEt"
                android:lines="1"
                android:hint="@string/hint_invite"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="18dp"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="0dp"
                android:text="@string/role_hacker"
                android:checked="true"
                android:id="@+id/hackerRb"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/painterRb"
                android:text="@string/role_painter"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:layout_width="match_parent"
            android:layout_marginTop="18dp"
            android:text="@string/btn_finish_register"
            android:theme="@style/PwlButton"
            android:id="@+id/registerBtn"
            android:textColor="@color/white"
            android:layout_height="56dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/toLoginTv"
            android:text="@string/info_back_to_login"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</FrameLayout>