<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/containFl"
    android:layout_height="match_parent"
    tools:context=".ui.activity.RegisterActivity">
    <ImageView
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:id="@+id/bgImg"
        android:adjustViewBounds="true"
        android:layout_height="match_parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:gravity="center_horizontal"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="96dp"
            android:layout_marginTop="64dp"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher"
            android:layout_marginBottom="16dp"
            android:layout_height="96dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/btn_register"
            android:layout_marginBottom="24dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundMode="outline"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:background="@null"
                android:inputType="text"
                android:id="@+id/userEt"
                android:lines="1"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:hint="@string/hint_user"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundMode="outline"
            android:layout_marginTop="18dp"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:background="@null"
                android:inputType="phone"
                android:id="@+id/phoneEt"
                android:lines="1"
                android:hint="@string/hint_phone"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="18dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                app:boxBackgroundMode="outline"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:inputType="text"
                    android:lines="1"
                    android:id="@+id/codeEt"
                    android:hint="@string/hint_code"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:layout_width="@dimen/_100dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/codeImg"
                android:layout_marginTop="4dp"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="18dp"
            android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            app:boxBackgroundMode="outline"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:background="@null"
                android:inputType="number"
                android:id="@+id/smsCodeEt"
                android:lines="1"
                android:hint="@string/hint_sms_code"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:layout_width="@dimen/_100dp"
                android:layout_marginLeft="10dp"
                android:text="@string/btn_get_sms"
                android:theme="@style/PwlButton"
                android:layout_marginTop="6dp"
                android:id="@+id/getSmsBtn"
                android:textColor="@color/white"
                android:layout_height="match_parent"/>

        </LinearLayout>
        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:layout_width="match_parent"
            android:layout_marginTop="18dp"
            android:text="@string/btn_register"
            android:theme="@style/PwlButton"
            android:id="@+id/registerBtn"
            android:textColor="@color/white"
            android:layout_height="56dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/toLoginTv"
            android:text="@string/info_back_to_login"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


</FrameLayout>