<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/_8dp"
    android:paddingBottom="@dimen/_8dp"
    android:paddingLeft="@dimen/_12dp"
    android:paddingRight="@dimen/_12dp"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <!--    <de.hdodenhof.circleimageview.CircleImageView-->
    <!--        android:layout_width="@dimen/_48dp"-->
    <!--        android:id="@+id/headImg"-->
    <!--        android:src="@mipmap/login_bg"-->
    <!--        android:layout_height="@dimen/_48dp"/>-->
    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_48dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/_24dp"
        android:layout_height="@dimen/_48dp">
        <ImageView
            android:layout_width="@dimen/_48dp"
            android:id="@+id/headImg"
            android:scaleType="centerCrop"
            android:src="@mipmap/login_bg"
            android:layout_height="@dimen/_48dp"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/userTv"
                android:textSize="14sp"
                android:lines="1"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/timeTv"
                android:lines="1"
                android:textSize="@dimen/_12sp"
                android:layout_marginLeft="2dp"
                android:textColor="@color/tv_c"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/_4dp"
            android:layout_marginTop="@dimen/_2dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:src="@mipmap/msg_arrow_redpack"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginRight="@dimen/_8dp"
                android:minWidth="@dimen/_120dp"
                android:orientation="vertical"
                android:background="@drawable/bg_msg_redpack"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:src="@mipmap/redpack"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="@dimen/_4dp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sp"
                        android:id="@+id/redpackContentTv"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:background="@drawable/bg_redpack_type"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="@color/tv_6"
                        android:textSize="14sp"
                        android:id="@+id/redpackTypeTv"
                        android:layout_marginRight="8dp"
                       android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/fingerLl"
                        android:visibility="gone"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/finger_stone"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/finger_scissors"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/finger_cloth"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>